# htmx_alpine_demo

./: .flake8  Dockerfile  README.md  app.py  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
static/css/: app.css
static/js/: contact.js
templates/: base.html  client.html  clock.html  contact.html  footer.html  header.html  index.html  partial.html  sse.html  ws.html
