[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | migrations
  )/
'''

[tool.isort]
profile = 'black'
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = 'migrations'
default_section = 'THIRDPARTY'
sections=['FUTURE','STDLIB','THIRDPARTY','FIRSTPARTY','LOCALFOLDER']

[tool.poetry]
name = "htmx_test"
version = "0.1.0"
description = ""
authors = ["Cristian Rasch <cristianrasch@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
